--- a/src/main/resources/templates/nation/city.html
+++ b/src/main/resources/templates/nation/city.html
@@ -67,7 +67,7 @@
         { title: '하노이', filenames: ['하노이1.jpeg', '하노이2.jpeg', '하노이3.jpeg'] },
         { title: '다낭', filenames: ['다낭1.jpeg', '다낭2.jpeg', '다낭3.jpeg'] },
         { title: '타이베이', filenames: ['타이베이1.jpeg', '타이베이2.jpeg', '타이베이3.jpeg'] },
-        { title: '가오슝', filenames: ['가오슝1.jpeg', '가오슝2.jpeg', '가오슝3.jpeg'] },
+        { title: '가요슝', filenames: ['가오슝1.jpeg', '가오슝2.jpeg', '가오슝3.jpeg'] },
         { title: '타이중', filenames: ['타이중1.jpeg', '타이중2.jpeg', '타이중3.jpeg'] },
         { title: '세부', filenames: ['세부1.jpeg', '세부2.jpeg', '세부3.jpeg'] },
         { title: '보홀', filenames: ['보홀1.jpeg', '보홀2.jpeg', '보홀3.jpeg'] },
@@ -84,6 +84,7 @@
         { title: '시드니', filenames: ['시드니1.jpeg', '시드니2.jpeg', '시드니3.jpeg'] },
         { title: '멜버른', filenames: ['멜버른1.jpeg', '멜버른2.jpeg', '멜버른3.jpeg'] },
         { title: '브리즈번', filenames: ['브리즈번1.jpeg', '브리즈번2.jpeg', '브리즈번3.jpeg'] },
+
 
 
     ];
