--- a/src/main/resources/templates/business/binpage.html
+++ b/src/main/resources/templates/business/binpage.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -42,12 +41,14 @@
                         <th>출발정보</th>
                         <th>도착정보</th>
                         <th>가격(1인 기준)</th>
+                        <th>관리</th>
                     </th:block>
                     <th:block th:if="${session.binCate == '2'}">
                         <th>국가</th>
                         <th>호텔명</th>
                         <th>체크인/체크아웃</th>
                         <th>가격(1박 기준)</th>
+                        <th>관리</th>
                     </th:block>
                     <th:block th:if="${session.binCate == '3'}">
                         <th>국가</th>
@@ -55,6 +56,7 @@
                         <th>티켓명</th>
                         <th>사용일</th>
                         <th>가격</th>
+                        <th>관리</th>
                     </th:block>
                     <th:block th:if="${session.binCate == '4'}">
                         <th>패키지명</th>
@@ -62,6 +64,7 @@
                         <th>시작일</th>
                         <th>종료일</th>
                         <th>가격</th>
+                        <th>관리</th>
                     </th:block>
                 </tr>
                 <tr th:each="item : ${item}">
@@ -73,12 +76,14 @@
                         <td>[[${#dates.format(item.getDepartureDateTime, 'yyyy-MM-dd HH:mm')}]]
                         <td>[[${#dates.format(item.getArrivalDateTime, 'yyyy-MM-dd HH:mm')}]]</td>
                         <td>[[${#numbers.formatInteger(item.getAirPrice, 3, 'COMMA')}]]</td>
+                        <td><input type="button" class="item_btn" onclick="#" value="관리"></td>
                     </th:block>
                     <th:block th:if="${session.binCate == '2'}">
                         <td>[[${item.getHotelCountry}]]</td>
                         <td>[[${item.getHotelName}]]</td>
                         <td>[[${item.getHotelTime}]]</td>
                         <td>[[${#numbers.formatInteger(item.getHotelPrice, 3, 'COMMA')}]]</td>
+                        <td><input type="button" class="item_btn" onclick="#" value="관리"></td>
                     </th:block>
                     <th:block th:if="${session.binCate == '3'}">
                         <td>[[${item.getTickPlace}]]</td>
@@ -86,6 +91,7 @@
                         <td>[[${item.getTickTitle}]]</td>
                         <td>[[${#dates.format(item.getTickDate, 'yyyy-MM-dd')}]]</td>
                         <td>[[${#numbers.formatInteger(item.getTickPrice, 3, 'COMMA')}]]</td>
+                        <td><input type="button" class="item_btn" onclick="#" value="관리"></td>
                     </th:block>
                     <th:block th:if="${session.binCate == '4'}">
                         <td>[[${item.getPackTitle}]]</td>
@@ -93,6 +99,7 @@
                         <td>[[${item.getPack}]]</td>
                         <td>[[${item.getPack}]]</td>
                         <td>[[${#numbers.formatInteger(item.getPackagePrice, 3, 'COMMA')}]]</td>
+                        <td><input type="button" class="item_btn" onclick="#" value="관리"></td>
                     </th:block>
                 </tr>
             </table>
