스타일 변경

--- a/src/main/resources/templates/board/boardwrite.html
+++ b/src/main/resources/templates/board/boardwrite.html
@@ -36,7 +36,7 @@
             <label for="tripImg">이미지</label>
             <input type="file" id="tripImg" name="tripImg">
         </div>
-        <div class="form-group">
+        <div class="form-group" style="display: none">
             <label for="tripYn">글 유형</label>
             <select id="tripYn" name="tripYn" th:field="*{tripYn}" required>
                 <option value="1">후기</option>
